// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon #className 1`] = `
<span>
  <svg
    className="u-test"
  >
    <use
      href="#test"
    />
  </svg>
</span>
`;

exports[`Icon #name 1`] = `
<span>
  <svg
    className=""
  >
    <use
      href="#test"
    />
  </svg>
</span>
`;

exports[`Icon #title 1`] = `
<span>
  <svg
    className=""
  >
    <use
      href="#test"
    />
  </svg>
  <span
    className="visuallyhidden"
  >
    Test title
  </span>
</span>
`;
